--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="shadow"></div>
     </div>
-    <div class="github"><a href="#">Click here</a> for Github Repository</div>
+    <div class="github"><a href="https://github.com/sbwasnik/mail_button_animation">Click here</a> for Github Repository</div>
 
 </body>
 </html>
